--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,20 @@ jobs:
       - name: Run tests
         run: npm test
 
+      - name: Verify test report exists
+        # Ensure the test report is uploaded regardless of the success or failure of previous steps
+        run: |
+          if [ ! -f reports/test-report.html ]; then
+            echo "Test report not found! Ensure your tests generate the report at 'reports/test-report.html'."
+            exit 1
+          fi
+          fi
+
       - name: Upload test report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: cucumber-report
-          path: reports/cucumber-report.html
+          name: test-report
+          path: |
+            reports/test-report.html
+            reports/cucumber-report.html
